--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      -
+      - name: Ensure ANTLR JAR is present
+        uses: ./.github/actions/get-antlr4
       - run: ./ci/check doc
   tests:
     strategy:
