--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -2,22 +2,10 @@ raw.client.sql {
   error-messages {
      missing-relation = "Did you forget to add credentials?"
   }
-  metadata-cache {
-    size = 1000 // how many individual user metadata caches do we keep
-    duration = 30m // how long do we keep a user metadata data cache
-    match-validity = 30s // how long matches are kept after a triggering keystroke
-    max-matches = 30 // how many matches do we keep (per user) for potential reuse
-  }
   pool {
-    max-connections = 10 // per user
-    max-lifetime = 5m
+    max-connections = 50 // Total max connections to the FDW database
+    max-connections-per-db = 5 // Total max connection to a given database
     idle-timeout = 30s
     connection-timeout = 30s
-    gc-period = 1h
-  }
-
-  fdw-db-cache {
-    size = 1000 // how many individual user databases we keep
-    duration = 1h // how long do we keep a user database
   }
 }
