Add isValid check.

--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -5,7 +5,7 @@ raw.client.sql {
   pool {
     max-connections = 50 // Total max connections to the FDW database
     max-connections-per-db = 5 // Total max connection to a given database
-    idle-timeout = 30s
-    connection-timeout = 30s
+    idle-timeout = 20m // How long before a connection is considered to be idle (for GC or for checking health)
+    health-check-period = 5s // How often to check for health of connections
   }
 }
