--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -7,5 +7,6 @@ raw.client.sql {
     max-connections-per-db = 5 // Total max connection to a given database
     idle-timeout = 20m // How long before a connection is considered to be idle (for GC or for checking health)
     health-check-period = 5s // How often to check for health of connections
+    is-valid-seconds = 5 // Controls the JDBC isValid(seconds) setting to use. Apparently 5 is a common value.
   }
 }
