--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -2,6 +2,12 @@ raw.client.sql {
   error-messages {
      missing-relation = "Did you forget to add credentials?"
   }
+  metadata-cache {
+    size = 1000 // How many individual user metadata caches to keep
+    duration = 30m // How long to keep user metadata data cache
+    match-validity = 30s // How long matches are kept after a triggering keystroke
+    max-matches = 30 // How many matches to keep (per user) for potential reuse
+  }
   pool {
     max-connections = 50 // Total max connections to the FDW database
     max-connections-per-db = 5 // Total max connection to a given database
