Persistent pool optimized for FDW (#466)
Implements a connection pool that is designed specifically for the needs of FDW and Steampipe.
This connection pool tries to keep connections active/alive for as long as possible; this ensures that Steampipe caches, which are per connection, stay alive for as long as possible.
The connection pool has a total global limit on the number of connections. If a new connection needs to be established, it will synchronously try to remove the oldest connection that isn't currently borrowed by anyone.
In addition, it keeps a limit on the number of active connections to a single database - this is done to prevent a single "user" from taking over all available slots.
Finally, it has a background thread that checks the health state of connections in the pool; this picks up one connection at a time (that is not used recently), and uses the JDBC isValid(...) method to check its validity.

--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -3,21 +3,16 @@ raw.client.sql {
      missing-relation = "Did you forget to add credentials?"
   }
   metadata-cache {
-    size = 1000 // how many individual user metadata caches do we keep
-    duration = 30m // how long do we keep a user metadata data cache
-    match-validity = 30s // how long matches are kept after a triggering keystroke
-    max-matches = 30 // how many matches do we keep (per user) for potential reuse
+    size = 1000 // How many individual user metadata caches to keep
+    duration = 30m // How long to keep user metadata data cache
+    match-validity = 30s // How long matches are kept after a triggering keystroke
+    max-matches = 30 // How many matches to keep (per user) for potential reuse
   }
   pool {
-    max-connections = 10 // per user
-    max-lifetime = 5m
-    idle-timeout = 30s
-    connection-timeout = 30s
-    gc-period = 1h
-  }
-
-  fdw-db-cache {
-    size = 1000 // how many individual user databases we keep
-    duration = 1h // how long do we keep a user database
+    max-connections = 50 // Total max connections to the FDW database
+    max-connections-per-db = 5 // Total max connection to a given database
+    idle-timeout = 20m // How long before a connection is considered to be idle (for GC or for checking health)
+    health-check-period = 5s // How often to check for health of connections
+    is-valid-seconds = 5 // Controls the JDBC isValid(seconds) setting to use. Apparently 5 is a common value.
   }
 }
