--- a/sources/src/main/resources/reference.conf
+++ b/sources/src/main/resources/reference.conf
@@ -17,27 +17,29 @@ raw.sources {
     network-timeout = 300 s
     login-timeout = 30 s
   }
-}
-raw.sources.dropbox.clientId = ""
-raw.sources.bytestream.http {
-  connect-timeout = 20 s
-  read-timeout = 120 s
-  conn-pool-max-per-route = 4096
-  conn-pool-max-total = 32768
-}
-raw.sources.s3 {
-  connect-timeout = 60 s
-  read-timeout = 120 s
-  max-connections = 50
+  bytestream {
+    http {
+      connect-timeout = 20 s
+      read-timeout = 120 s
+    }
+  }
+  dropbox {
+    clientId = ""
+  }
+  s3 {
+    connect-timeout = 60 s
+    read-timeout = 120 s
+    max-connections = 50
 
-  # Hadoop s3a filesystem will make a nested loop of retries with the 2 next settings.
-  # so if max-retries = 7 and max-attempts = 3, it will make 7*3 = 21 retries
-  # see fs.s3a.attempts.maximum and fs.s3a.retry.limit
-  max-retries = 10
-  max-attempts = 0
-  # Initial delay between s3a retries, see fs.s3a.retry.interval
-  retry-interval = 100 ms
-  tmp-dir = ${java.io.tmpdir}/s3
+    # Hadoop s3a filesystem will make a nested loop of retries with the 2 next settings.
+    # so if max-retries = 7 and max-attempts = 3, it will make 7*3 = 21 retries
+    # see fs.s3a.attempts.maximum and fs.s3a.retry.limit
+    max-retries = 10
+    max-attempts = 0
+    # Initial delay between s3a retries, see fs.s3a.retry.interval
+    retry-interval = 100 ms
+    tmp-dir = ${java.io.tmpdir}/s3
 
-  default-region = eu-west-1
+    default-region = eu-west-1
+  }
 }
