--- a/sql-compiler/src/main/resources/reference.conf
+++ b/sql-compiler/src/main/resources/reference.conf
@@ -11,5 +11,7 @@ raw.sql.compiler {
     idle-timeout = 20m # How long before a connection is considered to be idle (for GC or for checking health)
     health-check-period = 5s # How often to check for health of connections
     is-valid-seconds = 5 # Controls the JDBC isValid(seconds) setting to use. Apparently 5 is a common value.
+    retry-interval = 0.5 seconds # How long to wait and reconnect when an operation against FDW fails.
+    retries = 9 # How many retries when an operation against FDW fails (zero = we try but don't retry upon failure)
   }
 }
