--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,10 +7,11 @@ on:
       - project/**
       - deps/**
       - utils-core/**
-      - compiler-api/**
-      - compiler-snapi/**
-      - compiler-snapi-frontend/**
+      - utils-sources/**
+      - compiler/**
+      - snapi-frontend/**
       - snapi-truffle/**
+      - snapi-compiler/**
       - python-compiler/**
       - sql-compiler/**
       - .github/workflows/ci.yaml
@@ -44,8 +45,9 @@ jobs:
       fail-fast: false
       matrix:
         component:
-          - compiler-snapi-frontend
-          - compiler-snapi
+          - utils-sources
+          - snapi-frontend
+          - snapi-compiler
           - sql-compiler
           - python-compiler
     runs-on: self-hosted
