feat: scala-steward conf and mergify for com.raw-labs groupId

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,3 +1,16 @@
-updates.limit = 5
+updates.allow = [
+  {
+    groupId = {
+      startsWith = "com.raw-labs"
+    }
+  }
+]
 
-buildRoots = ["extensions", "language"]
+pullRequests = {
+  includeArtifactIds = true
+  title = "Update ${artifactName} to ${nextVersion}"
+  labels = ["dependencies", "scala-steward", "com.raw-labs"]
+  addLabels = {
+    updateTypes = true
+  }
+}
