refactor(automerge): improve steward and mergify conf

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -5,10 +5,11 @@ updates.allow = [
 ]
 
 pullRequests = {
-  includeArtifactIds = true
+  frequency = "@asap"
   title = "Update ${artifactName} to ${nextVersion}"
-  labels = ["dependencies", "scala-steward", "com.raw-labs"]
-  addLabels = {
-    updateTypes = true
-  }
+  customLabels = ["dependencies", "com.raw-labs"]
+  includeMatchedLabels = "(.*semver.*)"
 }
+
+assignees = ["datYori"]
+reviewers = ["raw-labs/snapi"]
