refactor(steward): improve grouping to cope with early semver

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -4,12 +4,12 @@ updates.allow = [
   }
 ]
 
-pullRequests = {
-  frequency = "@asap"
-  title = "Update ${artifactName} to ${nextVersion}"
-  customLabels = ["dependencies", "com.raw-labs"]
-  includeMatchedLabels = "(.*semver.*)"
-}
+pullRequests.customLabels = [ "dependencies"]
+
+pullRequests.grouping = [
+  { name = "patches", "title" = "chore(deps): patch update", "filter" = [{"version" = "patch"}] },
+  { name = "minor", "title" = "chore(deps): minor update", "filter" = [{"version" = "minor"}] },
+  { name = "major", "title" = "chore(deps): major update", "filter" = [{"version" = "major"}] }
+]
 
 assignees = ["datYori"]
-reviewers = ["raw-labs/snapi"]
